--- a/Odin/Content/css/transferee/itineraryPdf.scss
+++ b/Odin/Content/css/transferee/itineraryPdf.scss
@@ -1,10 +1,10 @@
 ﻿@import "../shared/_definitions.scss";
 html{
-    background-color: white !important;
+    background-color: white;
 }
 
 body{
-    background-color:white !important;
+    background-color:white;
 }
 
 div#itinerary {
