--- a/Odin/Content/css/transferee/HFProperties.scss
+++ b/Odin/Content/css/transferee/HFProperties.scss
@@ -122,7 +122,7 @@ li.propertyItem {
     display: none;
 }
 
-.form-control {
+/*.form-control {
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
-}
+}*/
