--- a/Odin/Content/css/transferee/housing.css
+++ b/Odin/Content/css/transferee/housing.css
@@ -1,49 +1,4 @@
-﻿html, body {
-  background-color: #f1f1f1; }
-
-a.dw_logo {
-  display: flex;
-  text-decoration: none;
-  align-items: center; }
-  a.dw_logo img.primaryNavHome__logo--mobile {
-    display: block;
-    height: 3rem;
-    width: auto;
-    text-decoration: none;
-    margin-right: 0.325rem; }
-  a.dw_logo img.primaryNavHome__logo {
-    display: none; }
-  a.dw_logo > p {
-    text-decoration: none;
-    line-height: 3rem;
-    height: 3rem;
-    color: #49ae44;
-    font-size: 2rem;
-    font-weight: 300;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    padding-left: 0.5rem;
-    margin-left: 0.5rem;
-    border-left: 1px solid #acacac; }
-  @media screen and (min-width: 48rem) {
-    a.dw_logo {
-      margin-left: 0.5rem; }
-      a.dw_logo img.primaryNavHome__logo--mobile {
-        display: none; }
-      a.dw_logo img.primaryNavHome__logo {
-        display: block;
-        height: 3rem;
-        width: auto;
-        padding-right: 0.325rem; } }
-  a.dw_logo:hover > p {
-    text-decoration: none; }
-
-.centered_logo {
-  display: flex;
-  justify-content: center;
-  margin: 3rem 0; }
-
-.mapWrapper {
+﻿.mapWrapper {
   height: 300px;
   overflow: hidden;
   position: relative; }
@@ -140,49 +95,49 @@ ul.thumbnails-carousel li img {
     #propertiesHeader {
       display: none; } }
 
-li.propertyItem {
+.sectionList li.propertyItem {
   margin: 0 0 0 0;
-  padding: 0.5rem 0 0.5rem 0; }
+  padding: 2rem 0 0.5rem 0; }
   @media screen and (max-width: 61.875rem) {
-    li.propertyItem {
+    .sectionList li.propertyItem {
       margin-top: 2rem;
       border-bottom: 1px solid #b7a998; } }
-  li.propertyItem:hover {
+  .sectionList li.propertyItem:hover {
     background-color: #f5f5f5;
     cursor: pointer; }
-  li.propertyItem > div {
+  .sectionList li.propertyItem > div {
     color: #31a4dd; }
-    li.propertyItem > div p {
+    .sectionList li.propertyItem > div p {
       text-align: center;
       line-height: 1.5rem; }
-    li.propertyItem > div .input-group.date, li.propertyItem > div .input-group.time {
+    .sectionList li.propertyItem > div .input-group.date, .sectionList li.propertyItem > div .input-group.time {
       margin: 0 auto;
       width: auto; }
-      li.propertyItem > div .input-group.date > input.form-control, li.propertyItem > div .input-group.time > input.form-control {
+      .sectionList li.propertyItem > div .input-group.date > input.form-control, .sectionList li.propertyItem > div .input-group.time > input.form-control {
         text-align: center; }
-    li.propertyItem > div img {
+    .sectionList li.propertyItem > div img {
       display: block;
       margin: 0 auto; }
     @media screen and (max-width: 61.875rem) {
-      li.propertyItem > div {
+      .sectionList li.propertyItem > div {
         margin-bottom: 2rem; }
-        li.propertyItem > div p {
+        .sectionList li.propertyItem > div p {
           text-align: left; }
-        li.propertyItem > div .input-group.date, li.propertyItem > div .input-group.time {
+        .sectionList li.propertyItem > div .input-group.date, .sectionList li.propertyItem > div .input-group.time {
           margin-left: 0;
           width: auto; }
-          li.propertyItem > div .input-group.date > input.form-control, li.propertyItem > div .input-group.time > input.form-control {
+          .sectionList li.propertyItem > div .input-group.date > input.form-control, .sectionList li.propertyItem > div .input-group.time > input.form-control {
             text-align: left; }
-        li.propertyItem > div img {
+        .sectionList li.propertyItem > div img {
           margin-left: 0; } }
-    li.propertyItem > div .btn-container {
+    .sectionList li.propertyItem > div .btn-container {
       text-align: center; }
-  li.propertyItem .comments {
+  .sectionList li.propertyItem .comments {
     position: relative; }
-    li.propertyItem .comments img {
+    .sectionList li.propertyItem .comments img {
       width: 3rem;
       display: inline-block; }
-    li.propertyItem .comments span {
+    .sectionList li.propertyItem .comments span {
       display: inline-block;
       position: absolute;
       top: -1rem;
