--- a/Odin/Content/css/transferee/housing.scss
+++ b/Odin/Content/css/transferee/housing.scss
@@ -140,9 +140,9 @@ ul.thumbnails-carousel li img {
     }
 }
 
-li.propertyItem {
+.sectionList li.propertyItem {
     margin: 0 0 0 0;
-    padding: 0.5rem 0 0.5rem 0;
+    padding: 2rem 0 0.5rem 0;
 
     @media screen and (max-width: 61.875rem) {
         margin-top: 2rem;
