--- a/Odin/Content/css/header.css
+++ b/Odin/Content/css/header.css
@@ -17,7 +17,7 @@
 .notification-dropdown > li.notifications_unread {
   border-bottom: solid;
   width: 100%;
-  border-bottom-color: lightgray;
+  border-bottom-color: darkgray;
   border-bottom-width: medium;
   background-image: url("/Content/Images/icn_attention.png");
   background-size: 90px;
@@ -36,6 +36,37 @@
   border-bottom-color: lightgray;
   border-bottom-width: medium;
   background-image: url("/Content/Images/icn_attention.png");
+  background-size: 90px;
+  background-repeat: no-repeat;
+  padding-left: 100px;
+  text-wrap: none;
+  height: 90px;
+  display: inline-block;
+  content: "x";
+  color: #999; }
+
+.notification-dropdown > li.notifications_unread_message {
+  border-bottom: solid;
+  width: 100%;
+  border-bottom-color: darkgray;
+  border-bottom-width: medium;
+  background-image: url("/Content/Images/icn_msg.png");
+  background-size: 90px;
+  background-repeat: no-repeat;
+  padding-left: 100px;
+  text-wrap: none;
+  height: 90px;
+  display: inline-block;
+  content: "x";
+  color: #999;
+  background-color: lightgray; }
+
+.notification-dropdown > li.notifications_read_message {
+  border-bottom: solid;
+  width: 100%;
+  border-bottom-color: lightgray;
+  border-bottom-width: medium;
+  background-image: url("/Content/Images/icn_msg.png");
   background-size: 90px;
   background-repeat: no-repeat;
   padding-left: 100px;
