Completed the PDF itinerary split, the pm sorting and disabled the link from itin for transferees

--- a/Odin/Views/Orders/Index.cshtml
+++ b/Odin/Views/Orders/Index.cshtml
@@ -23,7 +23,7 @@
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" align="center">
                 @foreach (var mngr in Model.Managers)
                 {
-                    <div class="clickablepm" data-order-id="@mngr.Id" align="center">@mngr.FullName</div><br>
+                    <div class="clickablepm" data-order-id="@mngr.Id" align="center">@mngr.LastName, @mngr.FirstName</div><br>
                 }
             </div>
         </div>
