Added HomeFinding services to order.

--- a/Odin/Views/Orders/Partials/_Dashboard.cshtml
+++ b/Odin/Views/Orders/Partials/_Dashboard.cshtml
@@ -34,7 +34,7 @@
                                     {
                                         <img class="dashboardTaskList__check" src="~/Content/Images/task_notDone.png">
                                     }
-                                    <p class="dashboardTaskList__taskText">@serv.ServiceType.ActionLabel</p>
+                                    <p class="dashboardTaskList__taskText">@serv.ActionLabel</p>
                                 </li>
                             }
                         </ul>
