fixed id issue and made chage to PDF

--- a/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
+++ b/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
@@ -146,7 +146,7 @@
 <script>
     $(document).ready(function () {
         $('#deselectProperty').click(function () {
-            TransfereeHousingController.selectProperty("", "@Model.propertyId");
+            TransfereeHousingController.selectProperty("", "@Model.Id");
         });
         $('#editProperty').click(function () {
             $('#modalForm').modal('show');
