--- a/Odin/Content/css/transferee/transferee.css
+++ b/Odin/Content/css/transferee/transferee.css
@@ -125,7 +125,7 @@ a.dw_logo {
       color: #35A2DB;
       font-size: 1.5rem;
       font-weight: 400;
-      margin: 0; }
+      margin: 1rem; }
   @media screen and (min-width: 62rem) {
     .sectionList label.mobileLabel {
       display: none; } }
