--- a/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
+++ b/Odin/Views/Orders/Partials/_SelectedProperty.cshtml
@@ -119,7 +119,7 @@
                     <input type="number" name="bathrooms" value="@Model.PropertyNumberOfBathrooms" />
                 </div>
             </div>
-            <div class="modal-body row">
+            <div class="modal-body row inputRow">
                 <div class="col-md-6">
                     <label for="squarefeet">Square feet</label>
                     <input type="number" name="squarefeet" value="@Model.PropertySquareFootage" />
