--- a/Odin/Content/css/transferee/HFPropertiesPDF.css
+++ b/Odin/Content/css/transferee/HFPropertiesPDF.css
@@ -14,6 +14,10 @@ p.spacer {
 .photoTable tr {
   height: 11rem; }
 
+.pdfTitle {
+  padding-top: 3rem;
+  margin-bottom: 2rem; }
+
 .sectionTable {
   line-height: 1.875rem;
   margin: 1rem 0 0 0;
@@ -35,27 +39,76 @@ p.spacer {
       font-weight: 500;
       color: #858585;
       padding: 0;
-      margin: 1.5rem 0 0 1.2rem;
       vertical-align: top; }
     .sectionTable td p {
       color: #35A2DB;
       font-size: 1.5rem;
       font-weight: 400;
       margin: 0;
-      margin-top: 1.5rem;
-      padding: 0 1.25rem 0 0;
+      padding: 0;
       overflow-wrap: break-word;
       word-wrap: break-word;
       -ms-word-break: break-all;
       word-break: break-all;
       word-break: break-word;
-      vertical-align: top; }
+      vertical-align: top;
+      text-align: right; }
     .sectionTable td td.photo {
       margin: .5rem; }
     .sectionTable td img.location {
       width: 14rem;
       height: 10rem;
       margin-left: 1rem; }
+
+.sectionRow {
+  line-height: 1.875rem;
+  margin: 1rem 0 0 0;
+  padding: 0;
+  display: block; }
+  .sectionRow .itemUnit {
+    margin: 1rem;
+    padding: 0;
+    display: inline-block;
+    vertical-align: top;
+    width: 22%; }
+  .sectionRow label {
+    display: block;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #858585;
+    padding: 0;
+    margin: 0;
+    vertical-align: top;
+    text-align: left; }
+  .sectionRow p {
+    color: #35A2DB;
+    font-size: 1.25rem;
+    font-weight: 400;
+    margin: 0;
+    margin-top: 1rem;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    vertical-align: top;
+    text-align: left; }
+  .sectionRow .addressPDF {
+    margin: 1rem;
+    padding: 0;
+    display: inline-block;
+    vertical-align: top;
+    width: 22%; }
+    .sectionRow .addressPDF label {
+      text-align: left; }
+    .sectionRow .addressPDF p {
+      text-align: left; }
+  .sectionRow td.photo {
+    margin: .5rem; }
+  .sectionRow img.location {
+    width: 14rem;
+    height: 10rem;
+    margin-left: 1rem; }
 
 #propertiesHeader {
   display: none; }
@@ -64,4 +117,7 @@ td.propertyItem {
   /*page-break-after: always;*/
   width: 25%;
   vertical-align: text-top; }
+
+.breakhere {
+  page-break-after: always; }
 
