--- a/Odin/Views/PDF/PDFProperties.cshtml
+++ b/Odin/Views/PDF/PDFProperties.cshtml
@@ -2,116 +2,103 @@
 @model IEnumerable<Odin.ViewModels.Orders.Transferee.HousingPropertyViewModel>
 
 <div id="propertiesBlock">
-    <h4>
-       @ViewBag.Title
+    <h4 class="pdfTitle">
+        @ViewBag.Title
     </h4>
-        @foreach (var propertyVM in Model)
-        {
 
-            <div class="propertyBody" data-property-id="@propertyVM.Id" data-lat="@propertyVM.PropertyLatitude" data-lng="@propertyVM.PropertyLongitude" data-liked="@propertyVM.Liked">                
-                <h5>@propertyVM.PropertyStreet1</h5>
-                <table class="sectionTable photoTable">                   
-                    <tr>
-                        @{
-                            int kount = 0;
-                            if (propertyVM.PropertyPhotos.Count() == 0)
+    @{var props = 1;
+            foreach (var propertyVM in Model)
+            {
+
+            <div class="propertyBody" data-property-id="@propertyVM.Id" data-lat="@propertyVM.PropertyLatitude" data-lng="@propertyVM.PropertyLongitude" data-liked="@propertyVM.Liked">
+            <h5>@propertyVM.PropertyStreet1</h5>
+            <table class="sectionTable photoTable">
+                <tr>
+                    @{
+                        int kount = 0;
+                        if (propertyVM.PropertyPhotos.Count() == 0)
+                        {
+                            <th>No photographs submitted for this property.</th>
+                        }
+                        foreach (var photo in propertyVM.PropertyPhotos)
+                        {
+                            if ((kount % 5) == 0 && kount > 0)
                             {
-                                <th>No photographs submitted for this property.</th>
+                                @:</tr><tr>
                             }
-                            foreach (var photo in propertyVM.PropertyPhotos)
+                            <td class="photo">
+                                <img class="location" src="@photo.PhotoUrl" />
+                            </td>
+                            kount = kount + 1;
+                            if ((kount % 5) == 0)
                             {
-                                if ((kount % 5) == 0 && kount > 0)
-                                {
-                                    @:</tr><tr>                                    
-                                }
-                                <td class="photo">
-                                    <img class="location" src="@photo.PhotoUrl" />
-                                </td>
-                                kount = kount + 1;
-                                if ((kount % 5) == 0)
-                                {
-                                    @:</tr>
-                                }
-                                if (kount > 9)
-                                {
-                                    break;
-                                }
+                                @:</tr>
+                            }
+                            if (kount > 9)
+                            {
+                                break;
                             }
                         }
-                        </tr>
-                    </table>
-                </div>
-                <table class="sectionTable">
-                    <tr>
-                        <td valign="top" width="25%">
-                            <label >Address:</label>
-                        </td>
-                        <td class="propertyItem" align="left" valign="top" width="25%">
-                            <p class="propertyAddress">
-                                @Html.DisplayFor(m => propertyVM.PropertyAddress)
-                            </p>
-                        </td>                    
-                        <td valign="top" width="25%">
-                            <label >Availability Date:</label>
-                        </td>
-                        <td class="propertyItem" width="25%">
-                            <p>
-                                @Html.DisplayFor(m => propertyVM.PropertyAvailabilityDate)
-                            </p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td valign="top">
-                            <label >Bedrooms:</label>
-                        </td>
-                        <td class="propertyItem">
-                            <p>
-                                @Html.DisplayFor(m => propertyVM.PropertyNumberOfBedrooms)
-                            </p>
-                        </td>                    
-                        <td valign="top">
-                            <label >Bathrooms:</label>
-                        </td>
-                        <td class="propertyItem">
-                            <p>
-                                @Html.DisplayFor(m => propertyVM.PropertyNumberOfBathrooms)
-                            </p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td valign="top">
-                            <label >Rent Amount:</label>
-                        </td>
-                        <td class="propertyItem">
-                            <p>
-                                @Html.DisplayFor(m => propertyVM.PropertyAmount)
-                            </p>
-                        </td>                   
-                        <td valign="top">
-                            <label >Square Footage:</label>
-                        </td>
-                        <td class="propertyItem">
-                            <p>
-                                @Html.DisplayFor(m => propertyVM.PropertySquareFootage)
-                            </p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td valign="top">
-                            <label >Scheduled Viewing:</label>
-                        </td>
-                        <td class="propertyItem">
-                            <p>@(propertyVM.ViewingDate.HasValue ? Html.DisplayFor(m => propertyVM.ViewingDate).ToString() : "N/A")</p>                            
-                        </td>                    
-                        <td valign="top">
-                            <label >Like or Dislike:</label>
-                        </td>
-                        <td class="propertyItem">
-                            <p>@(propertyVM.Liked.HasValue ? (Html.DisplayFor(m => propertyVM.Liked, new { propertyId = propertyVM.Id }).ToString() == "False" ? "DisLike" : "Like") : "N/A")</p>
-                        </td>
+                    }
                     </tr>
                 </table>
-                <hr />
-                            }
+            </div>
+            <div class="sectionRow">
+                <div class="addressPDF">
+                    <label>Address:</label>
+                    <p class="propertyAddress">
+                        @Html.DisplayFor(m => propertyVM.PropertyAddress)
+                    </p>
+                </div>
+                <div class="itemUnit">
+                    <label>Availability Date:</label>
+                    <p>
+                        @Html.DisplayFor(m => propertyVM.PropertyAvailabilityDate)
+                    </p>
+                </div>
+                <div class="itemUnit">
+                    <label>Bedrooms:</label>
+                    <p>
+                        @Html.DisplayFor(m => propertyVM.PropertyNumberOfBedrooms)
+                    </p>
+                </div>
+                <div class="itemUnit">
+                    <label>Bathrooms:</label>
+                    <p>
+                        @Html.DisplayFor(m => propertyVM.PropertyNumberOfBathrooms)
+                    </p>
+                </div>
+            </div>
+            <div class="sectionRow">
+                <div class="itemUnit">
+                    <label>Rent Amount:</label>
+                    <p>
+                        @Html.DisplayFor(m => propertyVM.PropertyAmount)
+                    </p>
+                </div>
+                <div class="itemUnit">
+                    <label>Square Footage:</label>
+                    <p>
+                        @Html.DisplayFor(m => propertyVM.PropertySquareFootage)
+                    </p>
+                </div>
+                <div class="itemUnit">
+                    <label>Scheduled Viewing:</label>
+                    <p>@(propertyVM.ViewingDate.HasValue ? Html.DisplayFor(m => propertyVM.ViewingDate).ToString() : "N/A")</p>
+                </div>
+                <div class="itemUnit">
+                    <label>Like or Dislike:</label>
+                    <p>@(propertyVM.Liked.HasValue ? (Html.DisplayFor(m => propertyVM.Liked, new { propertyId = propertyVM.Id }).ToString() == "False" ? "DisLike" : "Like") : "N/A")</p>
+                </div>
+            </div>
+            <hr />
+            if ((props % 2) == 0)
+            {
+                <P class="breakhere" />
+                }
+                props++;
+            }
+    }
+
 </div>
 @Styles.Render("~/Styling/propertiesPDF")
