Fixed edge and IE Edit Property issue

--- a/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
+++ b/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
@@ -50,7 +50,7 @@
 
             </ul>
 
-            <button type="button" id="editProperty" class="btn btn-secondary housingPropertyModal__edit">Edit</button>
+            <button type="button" id="editProperty" class="btn btn-secondary housingPropertyModal__edit">EDIT</button>
             <div class="row housingPropertyModal__likeDislike">
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.Liked, new { propertyId = Model.Id })
