--- a/Odin/Content/css/transferee/housing.css
+++ b/Odin/Content/css/transferee/housing.css
@@ -265,24 +265,42 @@ li.propertyItem {
 .likeDislike[data-liked="False"] .dislike {
   background: url("/Content/Images/icn_ln_selected_dislike.png") no-repeat; }
 
-#propertiesList[data-filter="liked"] .propertyItem[data-liked="True"] {
-  display: initial; }
+/*#propertiesList {
 
-#propertiesList[data-filter="liked"] .propertyItem:not([data-liked="True"]) {
-  display: none; }
+    &[data-filter="liked"] {
+        .propertyItem[data-liked="True"] {
+            display: initial;
+        }
 
-#propertiesList[data-filter="disliked"] .propertyItem[data-liked="False"] {
-  display: initial; }
+        .propertyItem:not([data-liked="True"]) {
+            display: none;
+        }
+    }
 
-#propertiesList[data-filter="disliked"] .propertyItem:not([data-liked="False"]) {
-  display: none; }
+    &[data-filter="disliked"] {
+        .propertyItem[data-liked="False"] {
+            display: initial;
+        }
 
-#propertiesList[data-filter="new"] .propertyItem[data-liked=""] {
-  display: initial; }
+        .propertyItem:not([data-liked="False"]) {
+            display: none;
+        }
+    }
 
-#propertiesList[data-filter="new"] .propertyItem:not([data-liked=""]) {
-  display: none; }
+    &[data-filter="new"] {
+        .propertyItem[data-liked=""] {
+            display: initial;
+        }
 
-#propertiesList[filter=""] .propertyItem {
-  display: initial; }
+        .propertyItem:not([data-liked=""]) {
+            display: none;
+        }
+    }
+
+    &[data-filter=""] {
+        .propertyItem {
+            display: initial;
+        }
+    }
+}*/
 
