--- a/Odin/Views/Orders/Partials/_History.cshtml
+++ b/Odin/Views/Orders/Partials/_History.cshtml
@@ -71,7 +71,7 @@
         {
             <div>
                 <div>
-                    <b>@notification.Title: </b> @notification.Message for <a href="/Orders/Transferee/@notification.OrderId" class="notifications">@notification.OrderTransfereeFullName</a>
+                    <b>@notification.Title: </b> @notification.Message for @notification.OrderTransfereeFullName
                 </div>
                 <div>
                     @notification.MyNotificationCreatedAt
