--- a/Odin/Views/Orders/Partials/_TransfereeSideNav.cshtml
+++ b/Odin/Views/Orders/Partials/_TransfereeSideNav.cshtml
@@ -16,14 +16,14 @@
         <div class="eeDetails">
             <p class="eeName">Consultant</p>
             <p class="eeName">@Model.ConsultantFullName</p>
-            <p class="eeDetails">@Model.ConsultantEmail</p>
+            <p class="eeDetails"><a class="eeDetails" href="mailto:@Model.ConsultantEmail">@Model.ConsultantEmail</a></p>
             <p class="eeDetails">@Model.ConsultantPhoneNumber</p>
         </div>
         <hr class="transfereeSideNav__rule" />
         <div class="eeDetails">
             <p class="eeName">Program Manager</p>
             <p class="eeName">@Model.ProgramManagerFullName</p>
-            <p class="eeDetails">@Model.ProgramManagerEmail</p>
+            <p class="eeDetails"><a class="eeDetails" href="mailto:@Model.ProgramManagerEmail">@Model.ProgramManagerEmail</a></p>
             <p class="eeDetails">@Model.ProgramManagerPhoneNumber</p>
         </div>
         <ul class="nav navbar-nav">
