--- a/Odin/Content/css/transferee/sideNav.css
+++ b/Odin/Content/css/transferee/sideNav.css
@@ -139,7 +139,8 @@ a.dw_logo {
         display: flex;
         align-items: center;
         flex-direction: column;
-        width: 100%; }
+        width: 100%;
+        color: white; }
         #transfereeSideNav .eeDetails .eeOriginVipWrap {
           display: flex;
           justify-content: center;
