--- a/Odin/Content/css/header.scss
+++ b/Odin/Content/css/header.scss
@@ -10,7 +10,7 @@
     width: 100vw;
     @media screen and (min-width: 40rem) {
         right:0;
-        left:initial;
+        left:auto;
         width: 400px;
     }
 }
