re-styled datetimepicker and hid empty carousel in details modal

--- a/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
+++ b/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
@@ -62,7 +62,10 @@
             </div>
         </div>
         <div class="col-md-8 col-md-pull-4">
-            @Html.DisplayFor(p => p.PropertyPhotos)
+            @if (Model.PropertyPhotos.Count() > 0)
+            {
+                Html.DisplayFor(p => p.PropertyPhotos);
+            }
             <div class="">
                 <label>@Html.DisplayNameFor(model => model.PropertyDescription)</label>
                 <p>@Html.Raw(@Model.PropertyDescription)</p>
