--- a/Odin/Content/css/transferee/details.css
+++ b/Odin/Content/css/transferee/details.css
@@ -51,7 +51,8 @@ div#details hr {
   display: block;
   font-size: 1.5rem;
   font-weight: 500;
-  color: #858585; }
+  color: #858585;
+  margin-top: 1rem; }
 
 .mobileLabel {
   color: red; }
