--- a/Odin/Content/css/transferee/transferee.scss
+++ b/Odin/Content/css/transferee/transferee.scss
@@ -99,7 +99,7 @@
             color: #35A2DB;
             font-size: 1.5rem;
             font-weight: 400;
-            margin: 1rem;
+            /*margin: 1rem;*/
         }
     }
 
