--- a/Odin/Views/Shared/EditorTemplates/CreateHousingProperty.cshtml
+++ b/Odin/Views/Shared/EditorTemplates/CreateHousingProperty.cshtml
@@ -134,8 +134,8 @@
     </div> @* close modal-body*@
 
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" id="closePropertyAdd">Close</button>
+        <button type="submit" class="btn btn-primary" id="savePropertyAdd">Save</button>
     </div>
 
 } @* Close Form *@
