--- a/Odin/Content/css/header.css
+++ b/Odin/Content/css/header.css
@@ -11,7 +11,7 @@
   @media screen and (min-width: 40rem) {
     .notification-dropdown {
       right: 0;
-      left: initial;
+      left: auto;
       width: 400px; } }
 
 .notification-dropdown > li.notifications_unread {
