including files and updating config post merge

--- a/Odin/Content/styles/css/ref_forgotpassword.css
+++ b/Odin/Content/styles/css/ref_forgotpassword.css
@@ -10,6 +10,7 @@
   list-style-type: none; }
 
 div.container.body-content {
+  min-height: 100vh;
   padding-top: 50px;
   min-height: 100vh; }
   @media (max-width: 768px) {
