--- a/Odin/Content/styles/scss/ref_transferee.scss
+++ b/Odin/Content/styles/scss/ref_transferee.scss
@@ -11,3 +11,5 @@
 @import "./ref_transferee/help.scss";
 @import "./ref_transferee/propertyMessages.scss";
 @import "./ref_transferee/dashboard.scss";
+@import "./ref_transferee/selectedProperty.scss";
+@import "./ref_transferee/HFPropertiesPDF.scss";
