--- a/Odin/Content/styles/scss/ref_transferee/housing.scss
+++ b/Odin/Content/styles/scss/ref_transferee/housing.scss
@@ -1,6 +1,4 @@
-﻿@import "../shared/_definitions.scss";
-
-.mapWrapper {
+﻿.mapWrapper {
     height: 300px;
     overflow: hidden;
     position: relative;
