Added code to prevent keyboard entry on the datetimepicker, styled the property pdf

--- a/Odin/Content/css/transferee/HFPropertiesPDF.css
+++ b/Odin/Content/css/transferee/HFPropertiesPDF.css
@@ -15,8 +15,7 @@ p.spacer {
   height: 11rem; }
 
 .pdfTitle {
-  padding-top: 3rem;
-  margin-bottom: 2rem; }
+  padding-top: 3rem; }
 
 .sectionTable {
   line-height: 1.875rem;
@@ -59,6 +58,9 @@ p.spacer {
       width: 14rem;
       height: 10rem;
       margin-left: 1rem; }
+
+.propertyBody {
+  padding-top: 3rem; }
 
 .sectionRow {
   line-height: 1.875rem;
