Change reset passwrod to create password on createpassword .html

--- a/Odin/Views/Mailers/CreatePassword.cshtml
+++ b/Odin/Views/Mailers/CreatePassword.cshtml
@@ -27,7 +27,7 @@
                 <div id="group-blk" style="margin-top: 60px;padding-top: 0px;" class="mailer">
                     <div style="padding-left:15px;padding-right:15px;" class="form-group">
                         <div style="font-size: 20px;width: 100%;" class="col-md-10;">
-                            <a clicktracking="off" style="text-decoration:none;display:inline-block;margin-bottom: 0;font-weight: normal;text-align: center;vertical-align: middle;-ms-touch-action: manipulation;touch-action: manipulation;cursor: pointer;background-image: none;border: 1px solid transparent;white-space: nowrap;padding: 1px 10px;font-size: 20px;line-height: 1.42857143;border-radius: 4px;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;color: #ffffff;background-color: #4BAD48; border-color: #95a5a6;" href="@Model.CreateUrl">Reset Password</a>
+                            <a clicktracking="off" style="text-decoration:none;display:inline-block;margin-bottom: 0;font-weight: normal;text-align: center;vertical-align: middle;-ms-touch-action: manipulation;touch-action: manipulation;cursor: pointer;background-image: none;border: 1px solid transparent;white-space: nowrap;padding: 1px 10px;font-size: 20px;line-height: 1.42857143;border-radius: 4px;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;color: #ffffff;background-color: #4BAD48; border-color: #95a5a6;" href="@Model.CreateUrl">Create Password</a>
                         </div>
 
                         <div style="margin-top: 110px;line-height: 10px;font-weight: 500;" class="col-md-10 mailer">
